--- a/apps/gmail.html
+++ b/apps/gmail.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Phone Help</title> <!--Text displayed on the broweser tab-->
-    <link rel="shortcut icon" type="image/x-icon" href="/images/phone.png"> <!--Icon displayed on the browser tab-->
+    <link rel="shortcut icon" type="image/x-icon" href="/images/shortcutIconPhone.png"> <!--Icon displayed on the browser tab-->
     <link href="/stylesheet/style.css" rel="stylesheet" type="text/css"/> <!--Original stylesheet used one all pages-->
     <link href="/stylesheet/apps.css" rel="stylesheet" type="text/css"/> <!--Stylesheet for the apps used-->
     <link href="/stylesheet/screenSizes.css" rel="stylesheet" type="text/css"/> <!--Stylesheet for different sized screens-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Stylesheet for icons used from Font Awesome-->
-    <script src="../script.js" type="text/javascript"></script> <!--The code validator says to remove the type attribute from the line of code, however without it the page runs withs errors-->
+    <script src="../script.js" type="text/javascript"></script> <!--Javascipt used bewtween multiple pages-->
   </head>
 
   <body>
@@ -23,7 +23,7 @@
     </nav>
 
     <!--Description of the app-->
-    <h1 class="appHeader" style="color: #E84A2E">Gmail</h1>
+    <h1 class="appHeader" style="color: #E84A2E">Gmail.</h1>
     <p class="appDescription">This app is a way of sending free and recieve digital letters from people all over the world. Gmail is an app you can download from the App Store on apple products or the Play Store on androids.</p>
 
     <!--Help button-->
@@ -36,7 +36,7 @@
       <div class="box" style="float: right;">
         <div class="insideBox">
 
-          <div id="beginningText"> <!--fix-->
+          <div id="beginningText">
             <h3>How to use this page:</h3> <!--Explanation on how to use the page-->
             <hr>
             <!--Two different explainations for if the user is user a laptop/computer or touch screen device-->
@@ -55,13 +55,12 @@
           </div>
 
           <!--Different section explanations that are displayed when the user clicks the corresponding coordinates on the image map. Some sections contain images for extra details or links to the Google help page if necessary.-->
-
           <div class="areaDescription" id="gmSideBar">
             <h3>Side Bar. (Three Lines)</h3>
             <hr>
             <p class="aboutFunction">When you click the side bar a tab will appear from the left with the following options for you to click. To get back to your inbox from either this tab or if you have clicked one of the options, just click the button that says "Inbox" in this tab.</p>
             <p class="aboutFunction"><b>Starred:  </b>This is where all of the emails that you have starred will appear(they will still be in your inbox though). Starred emails can help you distinguish between important and unimportant emails.</p>
-            <img src="/images/gmStarred.png" class="descriptionImage" alt="Starred vs Not Starred">
+            <img src="/images/gmail/gmStarred.png" class="descriptionImage" alt="Starred vs Not Starred">
             <p class="aboutFunction"><b>Snoozed:  </b>This allows you to to see emails you have temporarily removed.</p>
             <p class="aboutFunction"><b>Inportant:  </b>This folder places emails Google thinks maybe important to you. They do this by placing emails from frequent contacts or from keywords in the email.</p>
             <p class="aboutFunction"><b>Sent:  </b>Is the all the emails that you have sent. This can be helpful for you to determine if an email actually sends, if it doesn't it may appear in your drafts or outbox folder.</p>
@@ -78,7 +77,7 @@
             <h3>Search Mail.</h3>
             <hr>
             <p class="aboutFunction">If you wish to find an email in your inbox but are unable to, using this Search bar will help.</p>
-            <img src="/images/gmSearch.jpg" class="descriptionImage" alt="Search Mail">
+            <img src="/images/gmail/gmSearch.jpg" class="descriptionImage" alt="Search Mail">
             <p class="aboutFunction">You are able to search using the name/email of the sender or key words you remember from the email. You should refrain from using long scentences, as it will make it harder for you to find the email.</p>
             <br>
           </div>
@@ -97,7 +96,7 @@
             <h3>Email.</h3>
             <hr>
             <p class="aboutFunction">This is an email that you have recieved from another person. If  you haven't read the email before the text will appear bold, displayed in the image below.</p>
-            <img src="/images/gmUnread.png" class="descriptionImage" alt="Unread vs Read">
+            <img src="/images/gmail/gmUnread.png" class="descriptionImage" alt="Unread vs Read">
             <p class="about Function">There are many more function and buttons when you open an email to read, for a further explaination click the following button.</p>
             <div class="container">
               <div class="centre">
@@ -111,7 +110,7 @@
             <h3>Compose.</h3>
             <hr>
             <p class="aboutFunction">This is the button you click if you want to write an email, the following image is what will appear after you click compose(minus the red text).</p>
-            <img src="/images/gmCompose.png" class="descriptionImage" alt="Compose Email">
+            <img src="/images/gmail/gmCompose.png" class="descriptionImage" alt="Compose Email">
             <p class="aboutFunction">When filling in the Recipient information, you have to know the persons entire email address just entering their name won't work(unless you have frequently contacted them or their in you google contacts). The subject should be the main reason for the email and shouldn't be to long(typiclly 25-30 characters). Where it says "Compose email" is where you write the message itself.</p>
             <p class="aboutFunction"><i style="font-size:20px" class="fa">&#xf0c6;</i> The paperclip in the top right allows you to attach a document, picture or video from your device/google drive. If you add large files this will the time it takes the email to send slower.</p>
             <p class="aboutFunction">The arrow is the send button, only click this if your email is complete as you can't take it back after it's sent.</p>
@@ -137,7 +136,7 @@
 
       <div class="imageMapClass" id="imageMapFirst">
         <!--Image in the image map. The "usemap" links the image to the map.-->
-        <img src="/images/gmailInbox.jpg" usemap="#image-map" class="imageMapImage" alt="Gmail Inbox">
+        <img src="/images/gmail/gmInbox.jpg" usemap="#image-map" class="imageMapImage" alt="Gmail Inbox">
 
         <!--Image map made on "https://www.image-map.net/"-->
         <!--Each area is a different button on the home page, which is why the coords differ. The "data-target" links the area to its description and the "onclick" gets rid of the text that is dispalyed in the beginning when an area is clicked.-->
@@ -150,6 +149,7 @@
           <area alt="Mail" title="Mail" href="javascript:void(0)" coords="112,800,281,900" shape="rect" class="imageMapCoords" data-target="gmMail" onclick="beginningText()" />
           <area alt="Meet" title="Meet" href="javascript:void(0)" coords="408,806,587,900" shape="rect" class="imageMapCoords" data-target="gmMeet" onclick="beginningText()" />
         </map>
+
       </div>
 
     </div>
@@ -166,7 +166,7 @@
           <hr>
           <!--Image of the home page, casue they are no longer clicking the image-->
           <p class="padding2"><b>Home Page:</b></p>
-          <img src="/images/gmailInbox.jpg" class="descriptionImage" alt="Home Page">
+          <img src="/images/gmail/gmInbox.jpg" class="descriptionImage" alt="Home Page">
           <hr>
           <!--Allowing the user to go back to the previous page if they want.-->
           <p class="padding2">Accidentally clicked the button or want to try the image again, click this button to bring you back to the previous page:</p>
@@ -190,7 +190,7 @@
           <div class="section">
             <p class="aboutFunction">When you click the side bar a tab will appear from the left with the following options for you to click. To get back to your inbox from either this tab or if you have clicked one of the options, just click the button that says "Inbox" in this tab.</p>
             <p class="aboutFunction"><b>Starred:  </b>This is where all of the emails that you have starred will appear(they will still be in your inbox though). Starred emails can help you distinguish between important and unimportant emails.</p>
-            <img src="/images/gmStarred.png" class="descriptionImage" alt="Starred vs Not Starred">
+            <img src="/images/gmail/gmStarred.png" class="descriptionImage" alt="Starred vs Not Starred">
             <p class="aboutFunction"><b>Snoozed:  </b>This allows you to to see emails you have temporarily removed.</p>
             <p class="aboutFunction"><b>Inportant:  </b>This folder places emails Google thinks maybe important to you. They do this by placing emails from frequent contacts or from keywords in the email.</p>
             <p class="aboutFunction"><b>Sent:  </b>Is the all the emails that you have sent. This can be helpful for you to determine if an email actually sends, if it doesn't it may appear in your drafts or outbox folder.</p>
@@ -202,14 +202,16 @@
             <p class="aboutFunction"><b>Bin/Trash:  </b>All emails you have deleted will appear here. If you wish to resore the email, after clicking the email there should be three vertical dots in the right hand corner, in this a "Move to" button, after selecting this you will be able to move it to your inbox.</p>
             <br>
           </div>
+          <br>
 
           <button class="accordion">Search Mail</button>
           <div class="section">
             <p class="aboutFunction">If you wish to find an email in your inbox but are unable to, using this Search bar will help.</p>
-            <img src="/images/gmSearch.jpg" class="descriptionImage" alt="Search Mail">
+            <img src="/images/gmail/gmSearch.jpg" class="descriptionImage" alt="Search Mail">
             <p class="aboutFunction">You are able to search using the name/email of the sender or key words you remember from the email. You should refrain from using long scentences, as it will make it harder for you to find the email.</p>
             <br>
           </div>
+          <br>
 
           <button class="accordion">Account</button>
           <div class="section">
@@ -219,11 +221,12 @@
             <p class="aboutFunction"><b style="color: #E84A2E">&#9711;  </b>Managing your accounts on your device will bring you to your settings, where your able to remove any unwanted accounts from your device.</p>
             <br>
           </div>
+          <br>
 
           <button class="accordion">Email</button>
           <div class="section">
             <p class="aboutFunction">This is an email that you have recieved from another person. If  you haven't read the email before the text will appear bold, displayed in the image below.</p>
-            <img src="/images/gmUnread.png" class="descriptionImage" alt="Unread vs Read">
+            <img src="/images/gmail/gmUnread.png" class="descriptionImage" alt="Unread vs Read">
             <p class="about Function">There are many more function and buttons when you open an email to read, for a further explaination click the following button.</p>
             <div class="container">
               <div class="centre">
@@ -232,28 +235,32 @@
             </div>
             <br>
           </div>
+          <br>
 
           <button class="accordion">Compose</button>
           <div class="section">
             <p class="aboutFunction">This is the button you click if you want to write an email, the following image is what will appear after you click compose(minus the red text).</p>
-            <img src="/images/gmCompose.png" class="descriptionImage" alt="Compose Email">
+            <img src="/images/gmail/gmCompose.png" class="descriptionImage" alt="Compose Email">
             <p class="aboutFunction">When filling in the Recipient information, you have to know the persons entire email address just entering their name won't work(unless you have frequently contacted them or their in you google contacts). The subject should be the main reason for the email and shouldn't be to long(typiclly 25-30 characters). Where it says "Compose email" is where you write the message itself.</p>
             <p class="aboutFunction"><i style="font-size:20px" class="fa">&#xf0c6;</i> The paperclip in the top right allows you to attach a document, picture or video from your device/google drive. If you add large files this will the time it takes the email to send slower.</p>
             <p class="aboutFunction">The arrow is the send button, only click this if your email is complete as you can't take it back after it's sent.</p>
             <br>
           </div>
+          <br>
 
           <button class="accordion">Mail</button>
           <div class="section">
             <p class="aboutFunction">Your app will always open on the mail tab as the default. The main use for this button is to bring you can to this page when you click the "Meet" button next to it.</p>
             <br>
           </div>
+          <br>
 
           <button class="accordion">Meet</button>
           <div class="section">
             <p class="aboutFunction">Google Meet is a type video chat with multiple other people. If you would like to host a meeting, you will be given a code to send to other people that would like to join your meeting. The code acts as a key of some sorts, it's what they enter so they can join your specific meeting. If you are given the code and would like to join someone elses meeting click the "Join with a code" button, which you then enter the code you recieved.</p>
             <br>
           </div>
+          <br>
 
         </div>
       </div>
