--- a/apps/herald.html
+++ b/apps/herald.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Phone Help</title> <!--Text displayed on the broweser tab-->
-    <link rel="shortcut icon" type="image/x-icon" href="/images/phone.png"> <!--Icon displayed on the browser tab-->
+    <link rel="shortcut icon" type="image/x-icon" href="/images/shortcutIconPhone.png"> <!--Icon displayed on the browser tab-->
     <link href="/stylesheet/style.css" rel="stylesheet" type="text/css"/> <!--Original stylesheet used one all pages-->
     <link href="/stylesheet/apps.css" rel="stylesheet" type="text/css"/> <!--Stylesheet for the apps used-->
     <link href="/stylesheet/screenSizes.css" rel="stylesheet" type="text/css"/> <!--Stylesheet for different sized screens-->
-    <script src="../script.js" type="text/javascript"></script>
+    <script src="../script.js" type="text/javascript"></script> <!--Javascipt used bewtween multiple pages-->
   </head>
 
   <body>
@@ -22,8 +22,8 @@
     </nav>
 
     <!--Description of the app-->
-    <h1 class="appHeader" style="color: #E84A2E">...</h1>
-    <p class="appDescription">...</p>
+    <h1 class="appHeader" style="color: #050706">NZ Herald.</h1>
+    <p class="appDescription">The New Zealand Herald can be downloaded from the App Store and Google Play. This app keeps you up to date with the lastest news articles, photos and blogs around New Zealand.</p>
 
     <!--Help button-->
     <a class="helpButton" href="../helpPage.html">?</a>
@@ -54,12 +54,67 @@
           </div>
 
           <!--Different section explanations that are displayed when the user clicks the corresponding coordinates on the image map. Some sections contain images for extra details or links to the Google help page if necessary.-->
-
-          <div class="areaDescription" id="...">
-            <h3></h3>
+          <div class="areaDescription" id="nzhSearch">
+            <h3>Search.</h3>
             <hr>
-            <p class="aboutFunction"></p>
-            <img src="..." class="descriptionImage" alt="...">
+            <p class="aboutFunction">This button allows you to search for articles on the New Zealand Herald app. When searching it's best to use keywords rather than searching with long scentences, this is because you more likely to find articles using keywords.</p>
+            <br>
+          </div>
+
+          <div class="areaDescription" id="nzhWeather">
+            <h3>Weather.</h3>
+            <hr>
+            <p class="aboutFunction">The weather icon in the top right shows you the current weather for your selected region. If you wish to change the displayed region, clicking the icon will bring you to the following page.</p>
+            <img src="/images/herald/nzhWeather.jpg" class="descriptionImage" alt="Weather">
+            <p class="aboutFunction">When you're at this page clicking the blue box that says "Change region" will bring you to a list of region in New Zealand, you are then able to choose your desired location. Below your chosen region are the the next three days weather forecast.</p>
+            <br>
+          </div>
+
+          <div class="areaDescription" id="nzhTopButtons">
+            <h3>Top Buttons.</h3>
+            <hr>
+            <p class="aboutFunction">These buttons are designed to help you navigate between the different pages on the NZ Herald. If a button has a blue line underneth the text(In the photo below "Home" does) this indicates that you are currently on this page. You can swipe left/right to show more pages.</p>
+            <img src="/images/herald/nzhTopButtons.gif" class="descriptionImage" alt="Top Buttons">
+            <p class="aboutFunction"><b>Home -  </b>This is the page that will open when you first open NZ Hearld. The Home page is personilised to your interests. You can change you interests in your profile(In the bottom buttons), under the "My Topics" button. When you click My Topics you will see a list of options you follow and an area to add topics. If you wish to delete a topic, simply click the red circle next to the desired topic.</p>
+            <p class="aboutFunction"><b>Latest News -  </b>This page shows you current news, at the top of the page is the latest article published. Latest News allows you to keep up to date with News as it comes out.</p>
+            <p class="aboutFunction"><b>Premium -  </b>Articles that have been tagged Premium means you have to pay to read them. Typically when you click a premium article you will be able to read a small blurb about it, however, to read the entire thing you will need to pay. To pay for an article there will be a golden button on the article to click.</p>
+            <p class="aboutFunction"><b>Other -  </b>The other pages that appear when you swipe left/right depend on what interests you have followed as explained above.</p>
+            <br>
+          </div>
+
+          <div class="areaDescription" id="nzhArticles">
+            <h3>Articles.</h3>
+            <hr>
+            <p class="aboutFunction">The following image is the basic outline of what an all article you click will look like. The information they contain will be different but the way they function will be the same. To read the article simply swipe your finger up the device, this will scroll the page down for you to continue reading.</p>
+            <img src="/images/herald/nzhArticle.jpg" class="descriptionImage" alt="Article">
+            <br>
+            <p class="aboutFunction"><b>Comments -  </b>Commenting is a premium function, so to leave your opinion you will need the pay the subsciption fees, however, not all articles allow you to comment on them. If they do there will be a blue speech bubble with a number to the left, the number indicates the number of comments already left by other users.</p>
+            <p class="aboutFunction"><b>Text size -  </b>If you have trouble reading the article at the current font size, NZ Herald allows you to make the text either bigger or smaller. To do this click the button with two capital A's, this gives you the option to choose between font sizes.</p>
+            <p class="aboutFunction"><b>Share -  </b>If you would like to share the article to someone else, click the button with an up arrow. This will give you a list of options depending on your phone type.</p>
+            <p class="aboutFunction"><b>Save -  </b>Saving the article allows you to read it at a later date without having to search for it. The save button looks like a bookmark, it's located in the top right corner.</p>
+          </div>
+
+          <div class="areaDescription" id="nzhAlert">
+            <h3>Alert.</h3>
+            <hr>
+            <p class="aboutFunction">The red box down the bottom continues in a loop, displaying the latest news that NZ Herald thinks is important. To make this section disapper, you can either click the "X" button to the right, or click the text which will bring you to the article.</p>
+            <img src="/images/herald/nzhBottomButtons.jpg" class="descriptionImage" alt="Bottom Buttons">
+            <br>
+          </div>
+
+          <div class="areaDescription" id="nzhBottomButtons">
+            <h3>Bottom Buttons.</h3>
+            <hr>
+            <p class="aboutFunction">There are four buttons down the bottom of the page which all function differently. The Home page is the one that will be displayed when you first open the app. This page contains everything seen in the image next to or below this box.</p>
+            <img src="/images/herald/nzhBottomButtons.jpg" class="descriptionImage" alt="Bottom Buttons">
+            <p class="aboutFunction"><b>Premium -   </b> The premium page shows all articles tagged premium. To read these articles you will have to pay a subscription.</P>
+            <p class="aboutFunction"><b>Sections -  </b>This page places all articles into different categories. If a topic has an arrow to the right, this means it has sub-categories.</P>
+            <p class="aboutFunction"><b>Profiles -  </b>Your profile has many different functions that include, seeing your saved articles, changing your interests, subscribing to their newsletter or buying premium. For more detail surrounding NZ Herald please click the following button.</P>
+            <div class="container">
+              <div class="centre">
+                <a href="https://www.nzherald.co.nz/account/help/" target="_blank" class="buttons">More Help.</a>
+              </div>
+            </div>
             <br>
           </div>
 
@@ -67,12 +122,18 @@
       </div>
 
       <!--Image in the image map. The "usemap" links the image to the map.-->
-      <img src="..." usemap="#image-map" class="imageMapImage" alt="...">
+      <img src="/images/herald/nzhHomePage.jpg" usemap="#image-map" class="imageMapImage" alt="New Zealand Herald Home Page">
 
       <!--Image map made on "https://www.image-map.net/"-->
       <!--Each area is a different button on the home page, which is why the coords differ. The "data-target" links the area to its description and the "onclick" gets rid of the text that is dispalyed in the beginning when an area is clicked.-->
-        
-
+      <map name="image-map">
+        <area alt="Search" title="Search" href="javascript:void(0)" coords="9,9,160,131" shape="rect" class="imageMapCoords" data-target="nzhSearch" onclick="beginningText()" />
+        <area alt="Weather" title="Weather" href="javascript:void(0)" coords="883,9,1065,127" shape="rect" class="imageMapCoords" data-target="nzhWeather" onclick="beginningText()" />
+        <area alt="Top Buttons" title="Top Buttons" href="javascript:void(0)" coords="3,147,1077,269" shape="rect" class="imageMapCoords" data-target="nzhTopButtons" onclick="beginningText()" />
+        <area alt="Articles" title="Articles" href="javascript:void(0)" coords="7,281,1072,1891" shape="rect" class="imageMapCoords" data-target="nzhArticles" onclick="beginningText()" />
+        <area alt="Alert" title="Alert" href="javascript:void(0)" coords="5,1898,1077,1995" shape="rect" class="imageMapCoords" data-target="nzhAlert" onclick="beginningText()" />
+        <area alt="Bottom Buttons" title="Bottom Buttons" href="javascript:void(0)" coords="4,2005,1073,2125" shape="rect" class="imageMapCoords" data-target="nzhBottomButtons" onclick="beginningText()" />
+      </map>
 
     </div>
   
@@ -84,11 +145,11 @@
           <h3>Image failed:</h3>
           <hr>
           <!--Explaning the that you will still recieve the same amount of imformation just less interactive when the image map failed.-->
-          <p class="padding2">The image was supposed to give you a detailed explanation of different parts of ... when you clicked certain features on the image. This page gives you the same amount of information, but instead of you clicking the image, the different sections are shown, which will display more information when you click the title. When you click the section again it will close, don't worry you can open and close the sections as many times as you want.</p>
+          <p class="padding2">The image was supposed to give you a detailed explanation of different parts of the New Zealand Herald when you clicked certain features on the image. This page gives you the same amount of information, but instead of you clicking the image, the different sections are shown, which will display more information when you click the title. When you click the section again it will close, don't worry you can open and close the sections as many times as you want.</p>
           <hr>
           <!--Image of the home page, casue they are no longer clicking the image-->
           <p class="padding2"><b>Home Page:</b></p>
-          <img src="..." class="descriptionImage" alt="...">
+          <img src="/images/herald/nzhHomePage.jpg" class="descriptionImage" alt="New Zealand Herald Home Page">
           <hr>
           <!--Allowing the user to go back to the previous page if they want.-->
           <p class="padding2">Accidentally clicked the button or want to try the image again, click this button to bring you back to the previous page:</p>
@@ -108,11 +169,70 @@
         <div class="insideBox">
 
           <!--Each section are now in an accordion. The information about each part will be displayed when the header is clicked. These parts have the EXACT SAME information as the descriptions above.-->
-          <button class="accordion"></button>
+          <button class="accordion">Search</button>
           <div class="section">
-            
+            <p class="aboutFunction">This button allows you to search for articles on the New Zealand Herald app. When searching it's best to use keywords rather than searching with long scentences, this is because you more likely to find articles using keywords.</p>
             <br>
           </div>
+          <br>
+
+          <button class="accordion">Weather</button>
+          <div class="section">
+            <p class="aboutFunction">The weather icon in the top right shows you the current weather for your selected region. If you wish to change the displayed region, clicking the icon will bring you to the following page.</p>
+            <img src="/images/herald/nzhWeather.jpg" class="descriptionImage" alt="Weather">
+            <p class="aboutFunction">When you're at this page clicking the blue box that says "Change region" will bring you to a list of region in New Zealand, you are then able to choose your desired location. Below your chosen region are the the next three days weather forecast.</p>
+            <br>
+          </div>
+          <br>
+
+          <button class="accordion">Top Buttons</button>
+          <div class="section">
+            <p class="aboutFunction">These buttons are designed to help you navigate between the different pages on the NZ Herald. If a button has a blue line underneth the text(In the photo below "Home" does) this indicates that you are currently on this page. You can swipe left/right to show more pages.</p>
+            <img src="/images/herald/nzhTopButtons.gif" class="descriptionImage" alt="Top Buttons">
+            <p class="aboutFunction"><b>Home -  </b>This is the page that will open when you first open NZ Hearld. The Home page is personilised to your interests. You can change you interests in your profile(In the bottom buttons), under the "My Topics" button. When you click My Topics you will see a list of options you follow and an area to add topics. If you wish to delete a topic, simply click the red circle next to the desired topic.</p>
+            <p class="aboutFunction"><b>Latest News -  </b>This page shows you current news, at the top of the page is the latest article published. Latest News allows you to keep up to date with News as it comes out.</p>
+            <p class="aboutFunction"><b>Premium -  </b>Articles that have been tagged Premium means you have to pay to read them. Typically when you click a premium article you will be able to read a small blurb about it, however, to read the entire thing you will need to pay. To pay for an article there will be a golden button on the article to click.</p>
+            <p class="aboutFunction"><b>Other -  </b>The other pages that appear when you swipe left/right depend on what interests you have followed as explained above.</p>
+            <br>
+          </div>
+          <br>
+
+          <button class="accordion">Articles</button>
+          <div class="section">
+            <p class="aboutFunction">The following image is the basic outline of what an all article you click will look like. The information they contain will be different but the way they function will be the same. To read the article simply swipe your finger up the device, this will scroll the page down for you to continue reading.</p>
+            <img src="/images/herald/nzhArticle.jpg" class="descriptionImage" alt="Article">
+            <br>
+            <p class="aboutFunction"><b>Comments -  </b>Commenting is a premium function, so to leave your opinion you will need the pay the subsciption fees, however, not all articles allow you to comment on them. If they do there will be a blue speech bubble with a number to the left, the number indicates the number of comments already left by other users.</p>
+            <p class="aboutFunction"><b>Text size -  </b>If you have trouble reading the article at the current font size, NZ Herald allows you to make the text either bigger or smaller. To do this click the button with two capital A's, this gives you the option to choose between font sizes.</p>
+            <p class="aboutFunction"><b>Share -  </b>If you would like to share the article to someone else, click the button with an up arrow. This will give you a list of options depending on your phone type.</p>
+            <p class="aboutFunction"><b>Save -  </b>Saving the article allows you to read it at a later date without having to search for it. The save button looks like a bookmark, it's located in the top right corner.</p>
+            <br>
+          </div>
+          <br>
+
+          <button class="accordion">Alert</button>
+          <div class="section">
+            <p class="aboutFunction">The red box down the bottom continues in a loop, displaying the latest news that NZ Herald thinks is important. To make this section disapper, you can either click the "X" button to the right, or click the text which will bring you to the article.</p>
+            <img src="/images/herald/nzhBottomButtons.jpg" class="descriptionImage" alt="Bottom Buttons">
+            <br>
+          </div>
+          <br>
+
+          <button class="accordion">Bottom Buttons</button>
+          <div class="section">
+            <p class="aboutFunction">There are four buttons down the bottom of the page which all function differently. The Home page is the one that will be displayed when you first open the app. This page contains everything seen in the image next to or below this box.</p>
+            <img src="/images/herald/nzhBottomButtons.jpg" class="descriptionImage" alt="Bottom Buttons">
+            <p class="aboutFunction"><b>Premium -   </b> The premium page shows all articles tagged premium. To read these articles you will have to pay a subscription.</P>
+            <p class="aboutFunction"><b>Sections -  </b>This page places all articles into different categories. If a topic has an arrow to the right, this means it has sub-categories.</P>
+            <p class="aboutFunction"><b>Profiles -  </b>Your profile has many different functions that include, seeing your saved articles, changing your interests, subscribing to their newsletter or buying premium. For more detail surrounding NZ Herald please click the following button.</P>
+            <div class="container">
+              <div class="centre">
+                <a href="https://www.nzherald.co.nz/account/help/" target="_blank" class="buttons">More Help.</a>
+              </div>
+            </div>
+            <br>
+          </div>
+          <br>
 
         </div>
       </div>
