--- a/apps/messenger.html
+++ b/apps/messenger.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Phone Help</title> <!--Text displayed on the broweser tab-->
-    <link rel="shortcut icon" type="image/x-icon" href="/images/phone.png"> <!--Icon displayed on the browser tab-->
+    <link rel="shortcut icon" type="image/x-icon" href="/images/shortcutIconPhone.png"> <!--Icon displayed on the browser tab-->
     <link href="/stylesheet/style.css" rel="stylesheet" type="text/css"/> <!--Original stylesheet used one all pages-->
     <link href="/stylesheet/apps.css" rel="stylesheet" type="text/css"/> <!--Stylesheet for the apps used-->
     <link href="/stylesheet/screenSizes.css" rel="stylesheet" type="text/css"/> <!--Stylesheet for different sized screens-->
-    <script src="../script.js" type="text/javascript"></script>
+    <script src="../script.js" type="text/javascript"></script> <!--Javascipt used bewtween multiple pages-->
   </head>
 
   <body>
@@ -22,7 +22,7 @@
     </nav>
 
     <!--Description of the app-->
-    <h1 class="appHeader" style="color:#00a2ff">Messenger</h1>
+    <h1 class="appHeader" style="color:#00a2ff">Messenger.</h1>
     <p class="appDescription">This app can be downloaded from the App Store or Google Play. This is Facebooks messaging app which uses your Facebook account to message your friends. </p>
 
     <!--Help button-->
@@ -35,7 +35,7 @@
       <div class="box" style="float: right;">
         <div class="insideBox">
 
-          <div id="beginningText"> <!--fix-->
+          <div id="beginningText">
             <h3>How to use this page:</h3> <!--Explanation on how to use the page-->
             <hr>
             <!--Two different explainations for if the user is user a laptop/computer or touch screen device-->
@@ -54,13 +54,12 @@
           </div>
 
           <!--Different section explanations that are displayed when the user clicks the corresponding coordinates on the image map. Some sections contain images for extra details or links to the Google help page if necessary.-->
-
           <div class="areaDescription" id="mAccount">
             <h3>Account.</h3>
             <hr>
             <p class="aboutFunction">Clicking your profile picture in the top left corner, will bring you to a page with everything realted to your profile. Descriptions of different options are listed below:</p>
             <p class="aboutFunction"><b>Message Requests:  </b>These include messages people have tried to send you. Messenger categorises these messages into two groups those from people you may know and the ones they think maybe spam. You can navigate between these messages by clicking the two headers displayed in the image below.</p>
-            <img src="/images/mRequests.jpg" class="descriptionImage" alt="Messenger Requests">
+            <img src="/images/messenger/mRequests.jpg" class="descriptionImage" alt="Messenger Requests">
             <p class="aboutFunction"><b>Archived Chats:  </b>These are chats that you have left. You are able to unarchive/delete them by holding down the message, this should bring up the two options where you can click your desired option.</p>
             <p class="aboutFunction"><b>Profile:  </b>There are two buttons under the the profile header. The first allows you to turn off your status, this means your friends/contacts won't be able to see if your online. The second allows you to change your username.</p>
             <p class="aboutFunction"><b>Preferences:  </b>There multiple functions under this header, they allow you to change how Messenger works. The main ones are descibed below:</p>
@@ -82,7 +81,7 @@
             <h3>New Message.</h3>
             <hr>
             <p class="aboutFunction">The button in the top right corner allows you to create a new message. The image below is what comes up when you click the new message button.</p>
-            <img src="/images/mNewMessage.png" class="descriptionImage" alt="New Message">
+            <img src="/images/messenger/mNewMessage.png" class="descriptionImage" alt="New Message">
             <p class="aboutFunction">If you want to search for a person to message, using the search bar at the top that appears after clicking new message will allow you to do so. You will have to search by their Facebook name in order to find them. Clicking "Create a New Group" allows you to choose which recipents you would like in a group.</p>
             <br>
           </div>
@@ -106,15 +105,15 @@
             <hr>
             <p class="aboutFunction">This is the message itself, if the beginning of it says "You:" this means you were the one that sent the message, if not the message was sent to you. The images below are the difference between unread and read messages:</p>
             <p class="aboutFunction"><b>Unread.</b></p>
-            <img src="/images/mUnread.png" class="descriptionImage" alt="Unread Message">
+            <img src="/images/messenger/mUnread.png" class="descriptionImage" alt="Unread Message">
             <p class="aboutFunction"><b>Read.</b></p>
-            <img src="/images/mRead.png" class="descriptionImage" alt="Read Message">
+            <img src="/images/messenger/mRead.png" class="descriptionImage" alt="Read Message">
             <hr>
             <br>
             <p class="aboutFunction">When you click the message you are brought to the chat with that person/group. The following images are buttons you can find on this page:</p>
-            <img src="/images/mChatTopButtons.png" class="descriptionImage" alt="Top buttons in chat">
+            <img src="/images/messenger/mChatTopButtons.png" class="descriptionImage" alt="Top buttons in chat">
             <p class="aboutFunction">The buttons above are found at the top of your chat. There are a total of five different function here. The first is the go back button, which takes you back all your chats. Second is the person/group you are messaging, below it is the last time they were active. Next is the phone and the video chat button, both will call your chat the first one just with voice and the second with your voice plus camera. The last is an information button, this looks like a lowercase "i" in a circle, this gives you more information of the chat and the person(s) in it.</p>
-            <img src="/images/mChatBottomButtons.jpg" class="descriptionImage" alt="Bottom buttons in chat">
+            <img src="/images/messenger/mChatBottomButtons.jpg" class="descriptionImage" alt="Bottom buttons in chat">
             <p class="aboutFunction">These buttons are found at the bottom of your screen, they revolve around the messages you send to the chat. Starting from the left; the four dots allow you to see more options, including "Location" and "Create Room". Next is the camera which allows you to send photos to your friend. The next button is pretty similar to the previous one, however instead of the camera being opened you can choose photos from your gallery. The microphone is to make voice memos to send, this means you can record your voice and send it as a message rather than typing it. The last button is a thumbs up, which allows you to like your friends previous message.</p>
             <br>
           </div>
@@ -137,7 +136,7 @@
       </div>
 
       <!--Image in the image map. The "usemap" links the image to the map.-->
-      <img src="/images/mHome.png" usemap="#image-map" class="imageMapImage" alt="Messenger Home Page">
+      <img src="/images/messenger/mHome.png" usemap="#image-map" class="imageMapImage" alt="Messenger Home Page">
 
       <!--Image map made on "https://www.image-map.net/"-->
       <!--Each area is a different button on the home page, which is why the coords differ. The "data-target" links the area to its description and the "onclick" gets rid of the text that is dispalyed in the beginning when an area is clicked.-->
@@ -152,7 +151,6 @@
         <area alt="People" title="People" href="javascript:void(0)" coords="514,1992,1072,2124" shape="rect" class="imageMapCoords" data-target="mPeople" onclick="beginningText()" />
       </map>
 
-
     </div>
   
     <!--Image map failed-->  
@@ -163,11 +161,11 @@
           <h3>Image failed:</h3>
           <hr>
           <!--Explaning the that you will still recieve the same amount of imformation just less interactive when the image map failed.-->
-          <p class="padding2">The image was supposed to give you a detailed explanation of different parts of ... when you clicked certain features on the image. This page gives you the same amount of information, but instead of you clicking the image, the different sections are shown, which will display more information when you click the title. When you click the section again it will close, don't worry you can open and close the sections as many times as you want.</p>
+          <p class="padding2">The image was supposed to give you a detailed explanation of different parts of Messenger when you clicked certain features on the image. This page gives you the same amount of information, but instead of you clicking the image, the different sections are shown, which will display more information when you click the title. When you click the section again it will close, don't worry you can open and close the sections as many times as you want.</p>
           <hr>
           <!--Image of the home page, casue they are no longer clicking the image-->
           <p class="padding2"><b>Home Page:</b></p>
-          <img src="..." class="descriptionImage" alt="...">
+          <img src="/images/messenger/mHome.png" class="descriptionImage" alt="Messenger Home Page">
           <hr>
           <!--Allowing the user to go back to the previous page if they want.-->
           <p class="padding2">Accidentally clicked the button or want to try the image again, click this button to bring you back to the previous page:</p>
@@ -191,7 +189,7 @@
           <div class="section">
             <p class="aboutFunction">Clicking your profile picture in the top left corner, will bring you to a page with everything realted to your profile. Descriptions of different options are listed below:</p>
             <p class="aboutFunction"><b>Message Requests:  </b>These include messages people have tried to send you. Messenger categorises these messages into two groups those from people you may know and the ones they think maybe spam. You can navigate between these messages by clicking the two headers displayed in the image below.</p>
-            <img src="/images/mRequests.jpg" class="descriptionImage" alt="Messenger Requests">
+            <img src="/images/messenger/mRequests.jpg" class="descriptionImage" alt="Messenger Requests">
             <p class="aboutFunction"><b>Archived Chats:  </b>These are chats that you have left. You are able to unarchive/delete them by holding down the message, this should bring up the two options where you can click your desired option.</p>
             <p class="aboutFunction"><b>Profile:  </b>There are two buttons under the the profile header. The first allows you to turn off your status, this means your friends/contacts won't be able to see if your online. The second allows you to change your username.</p>
             <p class="aboutFunction"><b>Preferences:  </b>There multiple functions under this header, they allow you to change how Messenger works. The main ones are descibed below:</p>
@@ -201,59 +199,67 @@
             <p class="aboutFunction"><b>Account:  </b>This is basically just settings and if you need any help. It contains page for you to report technical problems, and a page for help.</p> 
             <br>
           </div>
+          <br>
 
           <button class="accordion">Camera</button>
           <div class="section">
             <p class="aboutFunction">Located at the top right corner, and looks like a camera. Taking a photo allows you to send it to either your story or to a desired person/group. When you open the camera you can choose to take a photo or video by either clicking the circle button(for a photo) or holding down the circle button(for a video). After you take the photo you have multiple options to customise your photo/video, including stickers, drawing and text.</p>
             <br>
           </div>
+          <br>
 
           <button class="accordion">New Message</button>
           <div class="section">
             <p class="aboutFunction">The button in the top right corner allows you to create a new message. If you want to search for a person to message, using the search bar at the top that appears after clicking new message will allow you to do so. You will have to search by their Facebook name in order to find them. Clicking "Create a New Group" allows you to choose which recipents you would like in a group.</p>
             <br>
           </div>
+          <br>
 
-          <button class="accordion"></button>
+          <button class="accordion">Search</button>
           <div class="section">
             <p class="aboutFunction">The search bar at the top allows you to search through your messages. This is helpful if you have a long page of messages, but your looking for a person.</p>
             <br>
           </div>
+          <br>
 
           <button class="accordion">Create Room</button>
           <div class="section">
             <p class="aboutFunction">Create a room is the same as a video call. It allows you to facetime your friends/contacts. When you click Create Room you are given the option to choose who you would like to invite to the call.</p>
             <br>
           </div>
+          <br>
 
           <button class="accordion">Message</button>
           <div class="section">
             <p class="aboutFunction">This is the message itself, if the beginning of it says "You:" this means you were the one that sent the message, if not the message was sent to you. The images below are the difference between unread and read messages:</p>
             <p class="aboutFunction"><b>Unread.</b></p>
-            <img src="/images/mUnread.png" class="descriptionImage" alt="Unread Message">
+            <img src="/images/messenger/mUnread.png" class="descriptionImage" alt="Unread Message">
             <p class="aboutFunction"><b>Read.</b></p>
-            <img src="/images/mRead.png" class="descriptionImage" alt="Read Message">
+            <img src="/images/messenger/mRead.png" class="descriptionImage" alt="Read Message">
             <hr>
             <br>
             <p class="aboutFunction">When you click the message you are brought to the chat with that person/group. The following images are buttons you can find on this page:</p>
-            <img src="/images/mChatTopButtons.png" class="descriptionImage" alt="Top buttons in chat">
+            <img src="/images/messenger/mChatTopButtons.png" class="descriptionImage" alt="Top buttons in chat">
             <p class="aboutFunction">The buttons above are found at the top of your chat. There are a total of five different function here. The first is the go back button, which takes you back all your chats. Second is the person/group you are messaging, below it is the last time they were active. Next is the phone and the video chat button, both will call your chat the first one just with voice and the second with your voice plus camera. The last is an information button, this looks like a lowercase "i" in a circle, this gives you more information of the chat and the person(s) in it.</p>
-            <img src="/images/mChatBottomButtons.jpg" class="descriptionImage" alt="Bottom buttons in chat">
+            <img src="/images/messenger/mChatBottomButtons.jpg" class="descriptionImage" alt="Bottom buttons in chat">
             <p class="aboutFunction">These buttons are found at the bottom of your screen, they revolve around the messages you send to the chat. Starting from the left; the four dots allow you to see more options, including "Location" and "Create Room". Next is the camera which allows you to send photos to your friend. The next button is pretty similar to the previous one, however instead of the camera being opened you can choose photos from your gallery. The microphone is to make voice memos to send, this means you can record your voice and send it as a message rather than typing it. The last button is a thumbs up, which allows you to like your friends previous message.</p>
             <br>
           </div>
+          <br>
 
           <button class="accordion">Chats</button>
           <div class="section">
             <p class="aboutFunction">There are two tabs down the bottom, the "Chats" one or the "People" one. When you open Messenger, whether it be from your home screen or from Facebook it will always open the "Chats" tab. The point of this button is to allow you to return to your chats after your on the peoples tab.</p>
             <br>
           </div>
+          <br>
 
           <button class="accordion">People</button>
           <div class="section">
             <p class="aboutFunction">There are two tabs down the bottom, the "Chats" one or the "People" one. The peoples tab allows you to see what friends are active and any stories that have been posted. The number that appears on top is the number of active friends.</p>
             <br>
           </div>
+          <br>
 
         </div>
       </div>
