--- a/helpPage.html
+++ b/helpPage.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Phone Help</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/phone.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/shortcutIconPhone.png">
     <link href="stylesheet/style.css" rel="stylesheet" type="text/css"/>
     <link href="stylesheet/screenSizes.css" rel="stylesheet" type="text/css"/>
     <script src="script.js"></script>
